--- a/friends_forlife/app/templates/app/dogs_4_adoption.html
+++ b/friends_forlife/app/templates/app/dogs_4_adoption.html
@@ -25,7 +25,7 @@
 				            <h2 class="block-title">Chapters</h2>
 				            <ul>
 				                <li class="is-active navBtnAdopt">
-				                    <a href="#">אמץ כלב</a>
+				                    <a href="#">222אמץ כלב</a>
 				                </li><!--
 				             --><li class="navBtnFoster">
 				                    <a href="#">רישום לאומנה</a>
