Added submit button to dogs_4_adoption.html Fixed typos

--- a/friends_forlife/app/templates/app/dogs_4_adoption.html
+++ b/friends_forlife/app/templates/app/dogs_4_adoption.html
@@ -50,7 +50,7 @@
 						<div class="mainTop"></div>
 						<div class="mainContent">
 				    		<h1>חיפוש כלבים לאימוץ</h1>
-					     		<form action="" method="post" autocomplete="on">
+					     		<form action="dogs_list" method="get" autocomplete="on">
 									<section class="dog_search_first_section"> 
 										<label class="radio_botton_label">
 											<h3>מין</h3>
@@ -121,9 +121,10 @@
 								<section class="dog_search_second_section">	
 									<h3>תכונות אופי</h3>
 									<input type="checkbox" name="Characteristics[]" value="childrens_friendly"><label>ידידותי לילדים</label><br>
-									<input type="checkbox" name="Characteristics[]" value="suitable_for_allergic"><label>מחונך לצרכים</label><br>
-									<input type="checkbox" name="Characteristics[]" value="habituated_for_needs"><label>מתאים לאלרגיים</label>
-								</section>
+									<input type="checkbox" name="Characteristics[]" value="suitable_for_allergic"><label>מתאים לאלרגיים</label><br>
+                                    <input type="checkbox" name="Characteristics[]" value="habituated_for_needs"><label>מחונך לצרכים</label>
+                                    <input type="submit">
+                                </section>
 								<div class="clear"></div>
 							</form>							
 						</div>
