--- a/friends_forlife/app/templates/app/index.html
+++ b/friends_forlife/app/templates/app/index.html
@@ -22,11 +22,11 @@
 			            </div>		    
 					    <nav id="nav">
 				            <ul>
-				                <li class="is-active navBtnAdopt">
-				                    <a href="#">אמץ כלב</a>
+				                <li class="navBtnAdopt">
+				                    <a href="dogs_4_adoption.html">אמץ כלב</a>
 				                </li>
 				             	<li class="navBtnFoster">
-				                    <a href="#">רישום לאומנה</a>
+				                    <a href="house_registration.html">רישום לאומנה</a>
 				                </li>
 				             <!--<li class="navBtnAbout">
 				                    <a href="#">אודות</>
